--- a/index.html
+++ b/index.html
@@ -4,5 +4,70 @@
 
     </head>
     <body>
-yooooo
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Elke wijk die heeft Mo de dealer
+Ik ben op cocaïne, ik moet m'n brood verdienen, broeder
+Niks veranderd, ben gewoon met dieven
+Ze haten mij of ze tonen liefde
+Kom ik bij die toonbank, beter toon je brieven
+Het is niet voor niks dat we school verlieten
+Ik hoef geen kind, dagverblijf is te duur
+Vandaar dat ik hele dag verblijf in de buurt
+Ik had sannie in de schuur, wiep geen wijven in de schuur
+Want sannie, dat is duur en wijven kunnen veel praten
+Tippen jou weg en dan gebeuren inbraken
+Kan niet tegen m'n verlies, broer, we moeten winst maken
+Doe gek, Jopie kan je op je kin raken
+Rappers dying, beter laat ze inslapen
+Money on my mind, ik heb geeneens zin in slapen
+Skinny boy, maar m'n dick noemt ze Big Poppa
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Elke wijk heeft z'n hoer Samira
+Ik ben op floes, jij shisha, ik ben met goons, jij diva's, en
+Maak me niet para, ik word moe, habiba
+Ik word rijk en dan bouw ik in m'n hood een villa
+Of ik ben weg, weg, zo van: "Bradda, man, je ziet me niet"
+Kleintjes in de buurt die je poppen voor een ki'tje wiet
+Ik werk niet, maar geen moeite met de vriendendienst
+En doen ze dat niet terug voor jou, dan zijn het je vrienden niet
+Altijd buiten, achter tralies als ik binnenbleef
+Want ik kom voor je balie als een Indonees
+Pushte sosa, maar ik zat ook in de haze
+Ton volgers, 11 maanden in de game
+Kom niet zeggen dat je heter dan me bent
+Want ik word herkend in Parijs door Nederlandse fans
+Werd ik nooit gepakt, reed ik zeker à la Benz
+Maar tegen torries zei ik: "Doe maar" als die Nederlandse band, Boef
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Ik ben in de buurt, ik moet hosselen
+Politie wil me pakken, speel verstoppertje
+Bitches willen plakken, maar we focken ze
+Ja, we focken ze, ik geef geen fock om ze
+Ik ben in de buurt, ik moet hosselen
+Bitches willen plakken, maar we focken ze
+Ik geef geen fock om ze
+Ik ben in de buurt
+Bitches willen plakken, maar we focken ze
+Ik ben in de buurt
+Ja, we focken ze, ik geef geen fock om ze
+
+<h1>Test</h1>
+<p>Test</p>
     </body>
