--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
 <h67>Test</h67>
 <p>Test</p>
- <img src="roy.png" width="300px" height="500px">
+ <img src="roy.png" width="670px" height="670px">
+ <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
     </body>
    
 
