--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
-<h67>Test</h67>
+<h12>titel</h12>
 <p>Test</p>
  <img src="roy.png" width="670px" height="670px">
  <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
