--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
-<h1>titel</h8>
+<h1>!royalistiq website!</h1>
+<h2>Hallo allemaal mijn naam is royalistiq jullie kennen mij waarschijnlijk wel van mijn youtube videos waar ik een grote variatie van online games speel, dit is mijn online website waar mijn merch en meer te koop is kijk ook bij een paar van me tips om de beste gamer te worden. Ik ben nogsteeds level 33 op fornite!</h2>
 <p>Test</p>
  <img src="roy.png" width="670px" height="670px">
  <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
