--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <p>Test</p>
  <img src="roy.png" width="670px" height="670px">
  <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
+ <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
     </body>
    
 
