--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
  <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
  <ul>
   <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="Handige tips.asp">Handige tips</a></li>
+  <li><a href="More Royalistiq.asp">More Royalistiq</a></li>
+  <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
 </ul>
     </body>
    
