--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>Test</p>
  <img src="roy.png" width="670px" height="670px">
  <a href="pagina 2!.html">Klik hier voor pagina 2!</a>
+ <a href="Binair stelsel.html">binair stelsel!</a>
  <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="Handige tips.asp">Handige tips</a></li>
