--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <a href="Binair stelsel.html">binair stelsel!</a>
  <ul>
   <li><a href="default.asp">Home</a></li>
-  <li><a href="Handige tips.asp">Handige tips</a></li>
+  <li><a href="Handige tips.html">Handige tips</a></li>
   <li><a href="More Royalistiq.asp">More Royalistiq</a></li>
   <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
 </ul>
