--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="Handige tips.html">Handige tips</a></li>
-  <li><a href="More Royalistiq.asp">More Royalistiq</a></li>
+  <li><a href="More Royalistiq.html">More Royalistiq</a></li>
   <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
 </ul>
 
