--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h2>Hallo allemaal mijn naam is royalistiq jullie kennen mij waarschijnlijk wel van mijn youtube videos waar ik een grote variatie van online games speel, dit is mijn online website waar mijn merch en meer te koop is kijk ook bij een paar van me tips om de beste gamer te worden. Ik ben nogsteeds level 33 op fornite!</h2>
 <p>Test</p>
  <img src="roy.png" width="670px" height="670px">
- <a href="Binair stelsel.html">binair stelsel!</a>
+
  <ul>
-  <li><a href="default.asp">Home</a></li>
+  <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
   <li><a href="Handige tips.html">Handige tips</a></li>
   <li><a href="More Royalistiq.html">More Royalistiq</a></li>
   <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
