--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </ul>
 
 <h1>!royalistiq website!</h1>
-<h2> Bradley Plezier
+<h2>Bradley Plezier</h2>
 
  <img src="roy.png" width="670px" height="670px">
 
