--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <ul>
  <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Handige tips.html">Handige tips</a></li>
- <li><a href="More Royalistiq.html">More Royalistiq</a></li>
+ <li><a href="Future Stars.html"> Future Stars</a></li>
 <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
 </ul>
 
