--- a/Future Stars.html
+++ b/Future Stars.html
@@ -6,7 +6,8 @@
 
 </head>
 <body>
-<h1>More Royalistiq!</h1>
+<h1>Future Stars</h1>
+<img src="Milo.png.webp" width=200px" height="250px">
 
 
 </body>
