--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </ul>
 
 <h1>Bradley Plezier</h1>
-<h2>Hallo, mijn naam is Bradley Plezier ik ben 14 jaar oud. ik heb 2 zusjes en mijn hobbies zijn gamen, chillen met vrienden en voetballen. Ook zit ik in de sportschool bij Mylife met een aantal vrienden. Ik hoop dat je door deze website meer te weten krijgt van mij.</h2>
+<h2>Hallo, mijn naam is Bradley Plezier ik ben 14 jaar oud. ik heb 2 zusjes en mijn hobbies zijn gamen, chillen met vrienden en voetballen. Ook zit ik in de sportschool bij Mylife met een aantal vrienden. Mijn favoriete content creator is royalistiq en hij is level 33 op fortnite battle royale. Ik hoop dat je door deze website meer te weten krijgt van mij.</h2>
 
 
  <img src="roy.png" width="670px" height="670px">
