--- a/Handige tips.html
+++ b/Handige tips.html
@@ -9,9 +9,10 @@
 
 </head>
 <body>
-<h1>Handige fortnite tips!</h1>
+<h1> Invoer-Verwerking-Uitvoer</h1>
+<h3>We moesten verschillende dingen tijdens het maken van onze website. Zo moesten wij leren hoe we foto's, verschillende groten tekst, tekst kleur, achtergrond kleur, meerdere paginas toevoegen, het binair stelsel en de compressie. Het lijkt heel veel alleen dat is het in werkelijkheid niet zolang je het maar snapt. Maar het snappen ging erg gemakkelijk door de uitleg van de docenten. </h3>
 
-
+<H4>ik heb mijn tekst in h1 en h3 gemaakt hoe dichter het getal bij de nul, hoe groter de letters zijn. Ik heb een aantal plaatjes erin gezet en Ik heb mijn tekst kleur voornamelijk in wit. De achtergrond kleur is zwart op iedere pagina en de compressie ne het binair stelsel heb ik op 2 losse paginas uitgelegd.</H4>
 
 
 </body>
