--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
      <ul>
  <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
-<li><a href="Handige tips.html">Handige tips</a></li>
+<li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
 <li><a href="Royalistiq Army.asp">Royalistiq Army</a></li>
 </ul>
