--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
-<li><a href="Royalistiq army.html">Het binair stelsel</a></li>
+<li><a href="">De compressie</a></li>
 </ul>
 
 <h1>Bradley Plezier</h1>
