--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </ul>
 
 <h1>Bradley Plezier</h1>
-<h3></h3>
+<p>Hallo mijn naam is Bradley Plezier en ik ben 14 jaar.</p>
+<h3>Mijn hobby's zijn voetbal en buiten zijn met vrienden Ik speel al voetbal vanaf mijn 6e en mijn favoriete club is Ajax Amsterdam.</h3>
 <img src="Mylife.png.jpeg" width="670px" height="670px">
 
  
