--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
 <li><a href="compressie.html">De compressie</a></li>
+<li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
 </ul>
 
 <h1>Bradley Plezier</h1>
