--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -6,8 +6,15 @@
 
 
 
- </head>
+</head>
 <body>
+    <ul>
+<li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
+<li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
+ <li><a href="Future Stars.html"> Future Stars</a></li>
+<li><a href="compressie.html">De compressie</a></li>
+<li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
+</ul>
 <img src="Binair.png.jpeg" width="1200px" height="500">
 
 
