--- a/Future Stars.html
+++ b/Future Stars.html
@@ -6,6 +6,13 @@
 
 </head>
 <body>
+    <ul>
+<li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
+<li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
+ <li><a href="Future Stars.html"> Future Stars</a></li>
+<li><a href="compressie.html">De compressie</a></li>
+<li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
+</ul>
 <h1>Future Stars</h1>
 <img src="Milo.png.webp" width=200px" height="250px">
 <img src="Milou.png.jpeg" width=200px" height="250px">
