--- a/Invoer-Uitwerking-Uitvoer.html
+++ b/Invoer-Uitwerking-Uitvoer.html
@@ -9,6 +9,13 @@
 
 </head>
 <body>
+    <ul>
+<li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
+<li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
+ <li><a href="Future Stars.html"> Future Stars</a></li>
+<li><a href="compressie.html">De compressie</a></li>
+<li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
+</ul>
 <h1> Invoer-Verwerking-Uitvoer</h1>
 <h3>We moesten verschillende dingen tijdens het maken van onze website. Zo moesten wij leren hoe we foto's, verschillende groten tekst, tekst kleur, achtergrond kleur, meerdere paginas toevoegen, het binair stelsel en de compressie. Het lijkt heel veel alleen dat is het in werkelijkheid niet zolang je het maar snapt. Maar het snappen ging erg gemakkelijk door de uitleg van de docenten. </h3>
 
