--- a/compressie.html
+++ b/compressie.html
@@ -7,6 +7,13 @@
 
 </head>
 <body>
+    <ul>
+<li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
+<li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
+ <li><a href="Future Stars.html"> Future Stars</a></li>
+<li><a href="compressie.html">De compressie</a></li>
+<li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
+</ul>
 <h1>compressie</h1>
 
 
