--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
