--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -4,11 +4,12 @@
 <h1>Binair stelsel</h1>
 <h2></h2>
 
-
+<link rel="stylesheet" href="opmaak.css">
 
 </head>
 <body>
-    <ul>
+   <ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
