--- a/Invoer-Uitwerking-Uitvoer.html
+++ b/Invoer-Uitwerking-Uitvoer.html
@@ -5,11 +5,12 @@
 
 <head>
 
-
+<link rel="stylesheet" href="opmaak.css">
 
 </head>
 <body>
-    <ul>
+ <ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
