--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <Head>
-
+<link rel="stylesheet" href="opmaak.css">
 
 </Head>
 <body>
-    <ul>
+   <ul>
+<li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
 <li><a href="Invoer-Uitwerking-Uitvoer.html">Invoer-Uitwerking-Uitvoer</a></li>
  <li><a href="Future Stars.html"> Future Stars</a></li>
