--- a/compressie.html
+++ b/compressie.html
@@ -15,7 +15,7 @@
 </ul>
 <h1>compressie</h1>
 <h3>Afbeeldingen en geluiden/videos nemen veel ruimte in, om het aantal ruimte dat de videos/geluiden afbeeldingen innemen kleiner te maken bestaat er een bestandcompressie. Hierdoor wordt het aantal opslag dat wordt ingenomen kleiner en ook worden bestanden sneller gedownload via het internet.</h3>
-<h4>Er zijn 2 soorten bestandcompressie: losst compression en lossless compression.</h4>
+<h4>Er zijn 2 soorten bestandcompressie: lossy compression en lossless compression.</h4>
 
 
 
