--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -18,7 +18,7 @@
 </ul>
 <h1>Binair stelsel</h1>
 <h2></h2>
-<img src="Binair.png.jpeg" width="1200px" height="500">
+<img src="Binair.png.jpeg" width="250px" height="350px">
 
 
 </body>
