--- a/compressie.html
+++ b/compressie.html
@@ -18,6 +18,9 @@
 <h4>Er zijn 2 soorten bestandcompressie: lossy compression en lossless compression.</h4>
 <video src="https://www.youtube.com/watch?v=fIqNaaHvsG0"></video>
 
+<div id="video-container">
+    <iframe width="320" height="180" src="https://www.youtube.com/embed/fIqNaaHvsG0" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 
 
