--- a/compressie.html
+++ b/compressie.html
@@ -16,7 +16,7 @@
 <h1>compressie</h1>
 <h3>Afbeeldingen en geluiden/videos nemen veel ruimte in, om het aantal ruimte dat de videos/geluiden afbeeldingen innemen kleiner te maken bestaat er een bestandcompressie. Hierdoor wordt het aantal opslag dat wordt ingenomen kleiner en ook worden bestanden sneller gedownload via het internet.</h3>
 <h4>Er zijn 2 soorten bestandcompressie: lossy compression en lossless compression.</h4>
-<video src="https://www.youtube.com/watch?v=fIqNaaHvsG0"></video>
+<h4>ik heb hier linksonder nog een uitleg filmpje neergezet als je nog meer uitleg nodig hebt.</h4>
 
 <div id="video-container">
     <iframe width="320" height="180" src="https://www.youtube.com/embed/fIqNaaHvsG0" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
