--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -17,8 +17,11 @@
 <li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
 </ul>
 <h1>Binair stelsel</h1>
-<h2></h2>
+<h2>Het binair stelsel is een tweetallig talstelsel dat alleen de cijfers 0 en 1 gebruikt om getallen te representeren.</h2>
 <img src="Binair.png.jpeg" width="250px" height="350px">
+<div id="video-container">
+    <iframe width="320" height="180" src="Binaire getallenwww.youtube.com › watch" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 
 </body>
