--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -20,7 +20,7 @@
 <h2>Het binair stelsel is een tweetallig talstelsel dat alleen de cijfers 0 en 1 gebruikt om getallen te representeren.</h2>
 <img src="Binair.png.jpeg" width="250px" height="350px">
 <div id="video-container">
-    <iframe width="320" height="180" src="Binaire getallenwww.youtube.com › watch" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="320" height="180" src="https://www.youtube.com/watch?v=xS8U6eoXhNg" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 
