--- a/compressie.html
+++ b/compressie.html
@@ -22,6 +22,6 @@
     <iframe width="320" height="180" src="https://www.youtube.com/embed/fIqNaaHvsG0" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-
+<img src="compression.jpeg" alt="">
 
 </body>
