--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -13,6 +13,6 @@
 <li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
 </ul>
   <h1>Kleurmodellen</h1>  
-
+<img src="kleurmodellen.jpeg" alt="">
 
 </body>
