--- a/compressie.html
+++ b/compressie.html
@@ -19,7 +19,7 @@
 <h4>ik heb hier linksonder nog een uitleg filmpje neergezet als je nog meer uitleg nodig hebt.</h4>
 
 <div id="video-container">
-    <iframe width="320" height="180" src="https://www.youtube.com/embed/fIqNaaHvsG0" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="320" height="180" src="https://www.youtube.com/@natuurkunde" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <img src="compression.jpeg" alt="">
