--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -14,6 +14,9 @@
 </ul>
   <h1>Kleurmodellen</h1>  
 <img src="kleurmodellen.jpeg" alt="">
-<h2>Kleuren word</h2>
-
+<h2>Kleuren worden gecodeerd</h2>
+background-image: url(kleurmodellen.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 </body>
