--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="opmaak.css">
 
 </Head>
-<body>
+<body class="kleur">
    <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
