--- a/compressie.html
+++ b/compressie.html
@@ -4,7 +4,7 @@
 
 
 </head>
-<body>
+<body class="compressie">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
