--- a/Future Stars.html
+++ b/Future Stars.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="opmaak.css">
 
 </head>
-<body>
+<body class="FutureStars">
     <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="Binair stelsel.html">Het Binair stelsel!</a></li>
