--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -13,6 +13,29 @@
 <li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
 </ul>
   <h1>Kleurmodellen</h1>  
-<h2>Kleuren worden gecodeerd</h2>
+<h2>Kleuren worden gecodeerd 3 soorten:</h2>
+<h3>RGB (Rood, Groen, Blauw)
+
+Gebruikt voor schermen zoals computers, tv’s en telefoons.
+
+Kleur ontstaat door het mengen van rood, groen en blauw licht in verschillende intensiteiten.
+
+Voeg je alle kleuren samen, dan krijg je wit.
+
+CMYK (Cyaan, Magenta, Geel, Zwart)
+
+Gebruikt bij het drukken (printen).
+
+Dit is een subtractief model: kleuren ontstaan door het weghalen van licht.
+
+Meng je alle kleuren samen, dan krijg je zwart (of heel donker).
+
+HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)
+
+Wordt vaak gebruikt bij kleurselectie in software.
+
+Beschrijft kleuren op een manier die beter aansluit bij hoe mensen kleuren waarnemen.
+
+Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is.</h3>
 
 </body>
