--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -14,6 +14,7 @@
 </ul>
   <h1>Kleurmodellen</h1>  
 <h2>Kleuren worden gecodeerd 3 soorten:</h2>
+<div> class="blok"</div> 
 <h3>RGB (Rood, Groen, Blauw)
 
 Gebruikt voor schermen zoals computers, tv’s en telefoons.
