--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -14,7 +14,7 @@
 </ul>
   <h1>Kleurmodellen</h1>  
 <h2>Kleuren worden gecodeerd 3 soorten:</h2>
-<div> class="blok"</div> 
+
 <h3>RGB (Rood, Groen, Blauw)
 
 Gebruikt voor schermen zoals computers, tv’s en telefoons.
@@ -38,4 +38,18 @@ Wordt vaak gebruikt bij kleurselectie in software.
 Beschrijft kleuren op een manier die beter aansluit bij hoe mensen kleuren waarnemen.
 
 Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</h3>
+<div class="blok">
+<h2>Wat zijn kleurmodellen?</h2>
+<p>Een kleurmodel is een manier om kleuren te beschrijven met getallen.</p>
+</div>
+<div class="blok">
+<h2>Waarom is het belangrijk?</h2>
+<ul>
+<li>Kleurmodellen zorgen ervoor dat computers weten welke kleur te tonen.</li>
+<li>...</li>
+</ul>
+</div>
+
+
+
 </body>
