--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -15,22 +15,28 @@
   <h1>Kleurmodellen</h1>  
 <h2>Kleuren worden gecodeerd 3 soorten:</h2>
 
-<h3>RGB (Rood, Groen, Blauw)
+<div>
+<h3>RGB (Rood, Groen, Blauw)</h3>
 
-Gebruikt voor schermen zoals computers, tv’s en telefoons.
+<li>Gebruikt voor schermen zoals computers, tv’s en telefoons.</li>
 
-Kleur ontstaat door het mengen van rood, groen en blauw licht in verschillende intensiteiten.
+<li></li>Kleur ontstaat door het mengen van rood, groen en blauw licht in verschillende intensiteiten.</li>
 
-Voeg je alle kleuren samen, dan krijg je wit.
-</h3>
-<h3>CMYK (Cyaan, Magenta, Geel, Zwart)
+<li>Voeg je alle kleuren samen, dan krijg je wit.</li>
+</div>
 
-Gebruikt bij het drukken (printen).
+<div>
+<h2>CMYK (Cyaan, Magenta, Geel, Zwart)</h2>
 
-Dit is een subtractief model: kleuren ontstaan door het weghalen van licht.
+<li>Gebruikt bij het drukken (printen).</li>
 
-Meng je alle kleuren samen, dan krijg je zwart (of heel donker).
-</h3>
+<li>Dit is een subtractief model: kleuren ontstaan door het weghalen van licht.</li>
+
+<li>Meng je alle kleuren samen, dan krijg je zwart (of heel donker).
+</li>
+</div>
+
+
 <h3>HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)
 
 Wordt vaak gebruikt bij kleurselectie in software.
