--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -37,13 +37,13 @@
 </div>
 
 
-<h3>HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)
+<h1>HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)</h1>
 
-Wordt vaak gebruikt bij kleurselectie in software.
+<li>Wordt vaak gebruikt bij kleurselectie in software.</li>
 
-Beschrijft kleuren op een manier die beter aansluit bij hoe mensen kleuren waarnemen.
+<li>Beschrijft kleuren op een manier die beter aansluit bij hoe mensen kleuren waarnemen.</li>
 
-Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</h3>
+<li>Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</li>
 
 
 
