--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -15,17 +15,17 @@
   <h1>Kleurmodellen</h1>  
 <h2>Kleuren worden gecodeerd 3 soorten:</h2>
 
-<div>
+<div class="border">
 <h3>RGB (Rood, Groen, Blauw)</h3>
 
 <li>Gebruikt voor schermen zoals computers, tv’s en telefoons.</li>
 
-<li></li>Kleur ontstaat door het mengen van rood, groen en blauw licht in verschillende intensiteiten.</li>
+<li>Kleur ontstaat door het mengen van rood, groen en blauw licht in verschillende intensiteiten.</li>
 
 <li>Voeg je alle kleuren samen, dan krijg je wit.</li>
 </div>
 
-<div>
+<div class="border">
 <h2>CMYK (Cyaan, Magenta, Geel, Zwart)</h2>
 
 <li>Gebruikt bij het drukken (printen).</li>
@@ -36,7 +36,7 @@
 </li>
 </div>
 
-
+<div class="border>
 <h1>HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)</h1>
 
 <li>Wordt vaak gebruikt bij kleurselectie in software.</li>
@@ -44,7 +44,7 @@
 <li>Beschrijft kleuren op een manier die beter aansluit bij hoe mensen kleuren waarnemen.</li>
 
 <li>Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</li>
-
+</div>
 
 
 </body>
