--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -36,7 +36,7 @@
 </li>
 </div>
 
-<div class="border>
+<div class="border">
 <h1>HSV / HSL (Tint, Verzadiging, Helderheid/Lichtheid)</h1>
 
 <li>Wordt vaak gebruikt bij kleurselectie in software.</li>
