--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -45,6 +45,8 @@
 
 <li>Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</li>
 </div>
-
+<div id="video-container">
+    <iframe width="320" height="180" src="https://www.youtube.com/watch?v=YtH9eXWuf3Y" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 </body>
