--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -45,6 +45,8 @@
 
 <li>Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</li>
 </div>
-<video> https://www.youtube.com/watch?v=YtH9eXWuf3Y</video>
+<div class="border">
+<iframe width="853" height="480" src="https://www.youtube.com/embed/YtH9eXWuf3Y" title="Color Theory Lesson - CMYK vs RGB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 
 </body>
