--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -46,6 +46,7 @@
 <li>Hue = kleurtoon, Saturation = intensiteit van de kleur, Value/Lightness = hoe licht of donker de kleur is</li>
 </div>
 <div class="border">
+  <h2>Uitleg filmpje over kleurmodellen:</h2>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/YtH9eXWuf3Y" title="Color Theory Lesson - CMYK vs RGB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
