--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="opmaak.css">
 
 </head>
-<body>
+<body class="binair">
     
    <ul>
 <li><a href="index.html">Home</a></li>
