--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -18,9 +18,9 @@
 </ul>
 <h1>Binair stelsel</h1>
 <h2>Het binair stelsel is een tweetallig talstelsel dat alleen de cijfers 0 en 1 gebruikt om getallen te representeren.</h2>
-<img src="Binair.png.jpeg" width="250px" height="350px">
+<iframe width="853" height="480" src="https://www.youtube.com/embed/xS8U6eoXhNg" title="Binaire getallen" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <div id="video-container">
-    <iframe width="320" height="180" src="https://www.youtube.com/watch?v=xS8U6eoXhNg" title="Video over compressie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </div>
 
 
