--- a/Binair stelsel.html
+++ b/Binair stelsel.html
@@ -16,10 +16,18 @@
 <li><a href="compressie.html">De compressie</a></li>
 <li><a href="Kleurmodellen.html">Kleurmodellen</a></li>
 </ul>
+
 <h1>Binair stelsel</h1>
+<div class="Border2">
 <h2>Het binair stelsel is een tweetallig talstelsel dat alleen de cijfers 0 en 1 gebruikt om getallen te representeren.</h2>
+</div>
+<div class="Border2">
 <iframe width="450" height="480" src="https://www.youtube.com/embed/xS8U6eoXhNg" title="Binaire getallen" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+
 <div id="video-container">
+
 
 </div>
 
